@@ -2278,6 +2278,18 @@ block|{
 return|return
 operator|(
 name|val1
+operator|==
+name|val2
+operator|)
+condition|?
+operator|(
+name|ord1
+operator|<
+name|ord2
+operator|)
+else|:
+operator|(
+name|val1
 operator|<
 name|val2
 operator|)
@@ -2318,6 +2330,18 @@ name|val2
 parameter_list|)
 block|{
 return|return
+operator|(
+name|val1
+operator|==
+name|val2
+operator|)
+condition|?
+operator|(
+name|ord1
+operator|>
+name|ord2
+operator|)
+else|:
 operator|(
 name|val1
 operator|>
@@ -2495,6 +2519,8 @@ operator|=
 literal|0
 expr_stmt|;
 block|}
+annotation|@
+name|Override
 DECL|method|getFacetRequest
 specifier|public
 name|FacetRequest
