@@ -188,6 +188,26 @@ name|facet
 operator|.
 name|search
 operator|.
+name|params
+operator|.
+name|FacetRequest
+operator|.
+name|ResultMode
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|facet
+operator|.
+name|search
+operator|.
 name|results
 operator|.
 name|FacetResult
@@ -2323,6 +2343,16 @@ operator|.
 name|setDepth
 argument_list|(
 literal|2
+argument_list|)
+expr_stmt|;
+comment|// makes it easier to check the results in the test.
+name|bandDepth
+operator|.
+name|setResultMode
+argument_list|(
+name|ResultMode
+operator|.
+name|GLOBAL_FLAT
 argument_list|)
 expr_stmt|;
 name|facetSearchParams
