@@ -200,6 +200,44 @@ name|search
 operator|.
 name|params
 operator|.
+name|FacetRequest
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|facet
+operator|.
+name|search
+operator|.
+name|params
+operator|.
+name|FacetRequest
+operator|.
+name|ResultMode
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|facet
+operator|.
+name|search
+operator|.
+name|params
+operator|.
 name|FacetSearchParams
 import|;
 end_import
@@ -271,6 +309,80 @@ name|RETRIES
 init|=
 literal|10
 decl_stmt|;
+annotation|@
+name|Override
+DECL|method|searchParamsWithRequests
+specifier|protected
+name|FacetSearchParams
+name|searchParamsWithRequests
+parameter_list|(
+name|int
+name|numResults
+parameter_list|,
+name|int
+name|partitionSize
+parameter_list|)
+block|{
+name|FacetSearchParams
+name|res
+init|=
+name|super
+operator|.
+name|searchParamsWithRequests
+argument_list|(
+name|numResults
+argument_list|,
+name|partitionSize
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|FacetRequest
+name|req
+range|:
+name|res
+operator|.
+name|getFacetRequests
+argument_list|()
+control|)
+block|{
+comment|// randomize the way we aggregate results
+if|if
+condition|(
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+condition|)
+block|{
+name|req
+operator|.
+name|setResultMode
+argument_list|(
+name|ResultMode
+operator|.
+name|GLOBAL_FLAT
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|req
+operator|.
+name|setResultMode
+argument_list|(
+name|ResultMode
+operator|.
+name|PER_NODE_IN_TREE
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+return|return
+name|res
+return|;
+block|}
 DECL|method|getSamplingAccumulator
 specifier|protected
 specifier|abstract
